common/force-app/main/default/objects/EOI__c/EOI__c.object-meta.xml
<CustomObject>
    <description>This object will be used by Founders, this was part of the MVP project.</description>
    <label>EOI</label>
    <nameField>
        <label>EOI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EOI&apos;s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>