common/force-app/main/default/objects/EOI__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>This will link to the Ventures Company Account that is related to the EOI</description>
    <inlineHelpText>This field links to the Ventures Company Account that is related to this EOI</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EOI&apos;s</relationshipLabel>
    <relationshipName>EOI_s</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>