common/force-app/main/default/objects/EOI__c/fields/Activity_Alert__c.field-meta.xml
<CustomField>
    <fullName>Activity_Alert__c</fullName>
    <description>This calculates the days without activity</description>
    <formula>IF(
    OR(
        ISPICKVAL(EOI_Status__c, &quot;Published&quot;),
        ISPICKVAL(EOI_Status__c, &quot;Closed&quot;)
    ),
    &quot;🟢 Published/Closed&quot;,
    IF(
        ISBLANK(LastActivityDate),
        &quot;🟠 no activity&quot;,
        IF(
            (TODAY() - LastActivityDate) &lt; 15,
            &quot;🟢 on time&quot;,
            IF(
                AND(
                    (TODAY() - LastActivityDate) &gt;= 15,
                    (TODAY() - LastActivityDate) &lt;= 30
                ),
                &quot;🟠 over 15d&quot;,
                IF(
                    (TODAY() - LastActivityDate) &gt; 30,
                    &quot;🔴 over 30d&quot;,
                    &quot;&quot;
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This calculates the days without activity</inlineHelpText>
    <label>Last EOI Activity Alert</label>
    <type>Text</type>
</CustomField>