common/force-app/main/default/objects/EOI__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a field that will be managed from a flow perspective, and will be used for the approval process and the display in the record indicating if it is locked or not.</description>
    <inlineHelpText>This is a field that will be managed from an automated flow, and will be used for the approval process and the display in the record indicating if it is locked or not.</inlineHelpText>
    <label>Approval Status</label>
    <type>Checkbox</type>
</CustomField>