common/force-app/main/default/objects/EOI__c/fields/Banner_URL__c.field-meta.xml
<CustomField>
    <fullName>Banner_URL__c</fullName>
    <label>Banner URL</label>
    <type>Url</type>
</CustomField>