common/force-app/main/default/objects/EOI__c/fields/Company_Stage__c.field-meta.xml
<CustomField>
    <fullName>Company_Stage__c</fullName>
    <label>Company Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Seed</fullName>
            </value>
            <value>
                <fullName>Seed</fullName>
            </value>
            <value>
                <fullName>Series A</fullName>
            </value>
            <value>
                <fullName>Series B +</fullName>
            </value>
            <value>
                <fullName>Pre-IPO</fullName>
            </value>
            <value>
                <fullName>IPO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>