common/force-app/main/default/objects/EOI__c/fields/Company_Website_Link__c.field-meta.xml
<CustomField>
    <fullName>Company_Website_Link__c</fullName>
    <description>Formula field that brings the Account Website and sets it up as a Hyperlink</description>
    <formula>HYPERLINK(Account__r.Website, Account__r.Website)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field that shows the Account Website.</inlineHelpText>
    <label>Company Website Link</label>
    <type>Text</type>
</CustomField>