common/force-app/main/default/objects/EOI__c/fields/Completion__c.field-meta.xml
<CustomField>
    <fullName>Completion__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Completion %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>