common/force-app/main/default/objects/EOI__c/fields/Conversion_Comment__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Comment__c</fullName>
    <description>To be used only for conversion purposes</description>
    <inlineHelpText>To be used only for conversion purposes</inlineHelpText>
    <label>Conversion Comment</label>
    <type>TextArea</type>
</CustomField>