common/force-app/main/default/objects/EOI__c/fields/Conversion_Probability_30__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Probability_30__c</fullName>
    <description>This is the potential conversion amount averaged at 30%. Used to calculate the potential of conversion into RAISE&apos;s. - NOT of the EOI itself, this field is for Executive Strategy Purposes</description>
    <formula>Target_Raise_Amount__c *0.3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the potential conversion amount averaged at 30%. Used to calculate the potential of conversion into RAISE&apos;s. - NOT of the EOI itself, this field is for Executive Strategy Purposes</inlineHelpText>
    <label>Conversion Probability (30%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>