common/force-app/main/default/objects/EOI__c/fields/Convert_to_Founder_Lead__c.field-meta.xml
<CustomField>
    <fullName>Convert_to_Founder_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convert to Founder Lead</label>
    <type>Checkbox</type>
</CustomField>