common/force-app/main/default/objects/EOI__c/fields/Days_Since_EOI_Activity_Update__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_EOI_Activity_Update__c</fullName>
    <formula>IF(
    OR(
        ISPICKVAL(EOI_Status__c, &quot;Published&quot;),
        ISPICKVAL(EOI_Status__c, &quot;Closed&quot;),
        ISBLANK(LastActivityDate)
    ),
    &quot;&quot;,
    TEXT(TODAY() - LastActivityDate) &amp; &quot; days&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since EOI Activity Update</label>
    <type>Text</type>
</CustomField>