common/force-app/main/default/objects/EOI__c/fields/Differentiation__c.field-meta.xml
<CustomField>
    <fullName>Differentiation__c</fullName>
    <label>Differentiation</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>