common/force-app/main/default/objects/EOI__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The Date that the EOI will close</description>
    <inlineHelpText>The Date that the EOI will close</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>