common/force-app/main/default/objects/EOI__c/fields/EOI_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>EOI_Closed_Date__c</fullName>
    <label>EOI Closed Date</label>
    <type>DateTime</type>
</CustomField>