common/force-app/main/default/objects/EOI__c/fields/EOI_Progress__c.field-meta.xml
<CustomField>
    <fullName>EOI_Progress__c</fullName>
    <description>Formula to evaluate Progress % of the EOI</description>
    <formula>IF( Target_Raise_Amount__c &gt; 0,
MIN(( Value_of_investment_interest__c / Target_Raise_Amount__c ), 1),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula to evaluate Progress % of the EOI</inlineHelpText>
    <label>EOI Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>