common/force-app/main/default/objects/EOI__c/fields/EOI_Published_Date__c.field-meta.xml
<CustomField>
    <fullName>EOI_Published_Date__c</fullName>
    <label>EOI Published Date</label>
    <type>DateTime</type>
</CustomField>