common/force-app/main/default/objects/EOI__c/fields/EOI_Status__c.field-meta.xml
<CustomField>
    <fullName>EOI_Status__c</fullName>
    <description>This is the Status (Progress) for the EOI record.</description>
    <label>EOI Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Published</fullName>
                <default>true</default>
                <label>Not Published</label>
            </value>
            <value>
                <fullName>Submitted to be Published</fullName>
            </value>
            <value>
                <fullName>Publishing</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>