common/force-app/main/default/objects/EOI__c/fields/EOI_Subtitle__c.field-meta.xml
<CustomField>
    <fullName>EOI_Subtitle__c</fullName>
    <description>EOI subtitle for the top of the EOI Preview Page</description>
    <inlineHelpText>EOI subtitle for the top of the EOI Preview Page</inlineHelpText>
    <label>EOI Subtitle</label>
    <length>200</length>
    <type>Text</type>
</CustomField>