common/force-app/main/default/objects/EOI__c/fields/EOI_Title__c.field-meta.xml
<CustomField>
    <fullName>EOI_Title__c</fullName>
    <description>EOI Title</description>
    <label>EOI Title</label>
    <length>200</length>
    <type>Text</type>
</CustomField>