common/force-app/main/default/objects/EOI__c/fields/Facebook_link__c.field-meta.xml
<CustomField>
    <fullName>Facebook_link__c</fullName>
    <label>Facebook link</label>
    <type>Url</type>
</CustomField>