common/force-app/main/default/objects/EOI__c/fields/First_Close_Amount__c.field-meta.xml
<CustomField>
    <fullName>First_Close_Amount__c</fullName>
    <label>First Close Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>