common/force-app/main/default/objects/EOI__c/fields/Founder_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Founder_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Founder Campaign</label>
    <referenceTo>Founder_Campaign__c</referenceTo>
    <relationshipLabel>EOI&apos;s</relationshipLabel>
    <relationshipName>EOI_s</relationshipName>
    <type>Lookup</type>
</CustomField>