common/force-app/main/default/objects/EOI__c/fields/Fund_Structure__c.field-meta.xml
<CustomField>
    <fullName>Fund_Structure__c</fullName>
    <label>Fund Structure</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>