common/force-app/main/default/objects/EOI__c/fields/Fund_Term__c.field-meta.xml
<CustomField>
    <fullName>Fund_Term__c</fullName>
    <label>Fund Term</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>