common/force-app/main/default/objects/EOI__c/fields/Growth_plan__c.field-meta.xml
<CustomField>
    <fullName>Growth_plan__c</fullName>
    <description>Field name to be used in Experience Cloud for MVP. Also used by Apex Class MyEOIController, CRUD EOI, Visualforce page for Preview.</description>
    <inlineHelpText>Field name to be used in Experience Cloud for MVP. Also used by Apex Class MyEOIController, CRUD EOI, Visualforce page for Preview.</inlineHelpText>
    <label>Growth plan</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>