common/force-app/main/default/objects/EOI__c/fields/Instagram_link__c.field-meta.xml
<CustomField>
    <fullName>Instagram_link__c</fullName>
    <label>Instagram link</label>
    <type>Url</type>
</CustomField>