common/force-app/main/default/objects/EOI__c/fields/Internal_Owner__c.field-meta.xml
<CustomField>
    <fullName>Internal_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Internal Owner in charge of the EOI and the Account</description>
    <inlineHelpText>Internal Owner in charge of the EOI and the Account</inlineHelpText>
    <label>Internal Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EOI_s1</relationshipName>
    <type>Lookup</type>
</CustomField>