common/force-app/main/default/objects/EOI__c/fields/Investment_Objective__c.field-meta.xml
<CustomField>
    <fullName>Investment_Objective__c</fullName>
    <label>Investment Objective</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>