common/force-app/main/default/objects/EOI__c/fields/Investment_Period__c.field-meta.xml
<CustomField>
    <fullName>Investment_Period__c</fullName>
    <label>Investment Period</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>