common/force-app/main/default/objects/EOI__c/fields/Investment_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Investment_Strategy__c</fullName>
    <label>Investment Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>