common/force-app/main/default/objects/EOI__c/fields/Is_Fund__c.field-meta.xml
<CustomField>
    <fullName>Is_Fund__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Fund</label>
    <type>Checkbox</type>
</CustomField>