common/force-app/main/default/objects/EOI__c/fields/Lead_Investors_SUM__c.field-meta.xml
<CustomField>
    <fullName>Lead_Investors_SUM__c</fullName>
    <label>Lead Investors SUM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>