common/force-app/main/default/objects/EOI__c/fields/Leads_expressed_interest__c.field-meta.xml
<CustomField>
    <fullName>Leads_expressed_interest__c</fullName>
    <inlineHelpText>Number of Leads that have expressed interest. This is calculated after a new lead is added or deleted.</inlineHelpText>
    <label>Leads expressed interest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>