common/force-app/main/default/objects/EOI__c/fields/Linkedin_link__c.field-meta.xml
<CustomField>
    <fullName>Linkedin_link__c</fullName>
    <label>Linkedin link</label>
    <type>Url</type>
</CustomField>