common/force-app/main/default/objects/EOI__c/fields/Minimum_Investment_amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Investment_amount__c</fullName>
    <description>The minimum investment amount that an investor is allowed to express interest in</description>
    <inlineHelpText>The minimum investment amount that an is allowed to express interest in</inlineHelpText>
    <label>Minimum Investment amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>