common/force-app/main/default/objects/EOI__c/fields/Next_Step_Date_Validation__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Date_Validation__c</fullName>
    <formula>IF(
    ISPICKVAL( EOI_Status__c , &quot;Published&quot;),
    &quot;🔵 Published&quot;,
    IF(
        ISPICKVAL(EOI_Status__c, &quot;Closed&quot;),
        &quot;🔵 Closed&quot;,
        IF(
            ISBLANK(Next_Step_Date_Time__c),
            &quot;☢️ No Steps&quot;,
            IF(
                DATEVALUE(Next_Step_Date_Time__c) &lt; TODAY(),
                &quot;🔴 Outdated Step&quot;,
                &quot;🟢 Step on time&quot;
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Step Date Validation</label>
    <type>Text</type>
</CustomField>