common/force-app/main/default/objects/EOI__c/fields/Offer_Overview__c.field-meta.xml
<CustomField>
    <fullName>Offer_Overview__c</fullName>
    <description>Offer Overview field, based on the figma file from the MVP of Feb 2024</description>
    <inlineHelpText>Please provide a one-liner about the offer.</inlineHelpText>
    <label>Company Overview</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>