common/force-app/main/default/objects/EOI__c/fields/One_liner_about_business__c.field-meta.xml
<CustomField>
    <fullName>One_liner_about_business__c</fullName>
    <label>One liner about business</label>
    <type>TextArea</type>
</CustomField>