common/force-app/main/default/objects/EOI__c/fields/Person_Account_Email__c.field-meta.xml
<CustomField>
    <fullName>Person_Account_Email__c</fullName>
    <label>Person Account Email</label>
    <type>Email</type>
</CustomField>