common/force-app/main/default/objects/EOI__c/fields/Person_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Person_Contact_ID__c</fullName>
    <description>This field is used by SFMC, for their journeys</description>
    <formula>Related_Person_Account__r.PersonContact.X18_character_EC_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used by SFMC, for their journeys</inlineHelpText>
    <label>Person Contact ID</label>
    <type>Text</type>
</CustomField>