common/force-app/main/default/objects/EOI__c/fields/Planned_used_of_funds__c.field-meta.xml
<CustomField>
    <fullName>Planned_used_of_funds__c</fullName>
    <inlineHelpText>Provide a 300 character description of the intended use of the funds</inlineHelpText>
    <label>Planned use of funds</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>