common/force-app/main/default/objects/EOI__c/fields/Portfolio_Size__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Size__c</fullName>
    <label>Portfolio Size</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>