common/force-app/main/default/objects/EOI__c/fields/Preview_EOI__c.field-meta.xml
<CustomField>
    <fullName>Preview_EOI__c</fullName>
    <formula>HYPERLINK(
    &quot;https://www.venturecrowd.com.au/s/lp/eoi-preview?id=&quot; &amp; Id,
    &quot;Click to view EOI&quot;,
    &quot;_blank&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preview EOI</label>
    <type>Text</type>
</CustomField>