common/force-app/main/default/objects/EOI__c/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <description>Text area - Details the progress of the Company</description>
    <inlineHelpText>Detail Progress of the company.</inlineHelpText>
    <label>Progress</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>