common/force-app/main/default/objects/EOI__c/fields/Publish_on_Community_Site__c.field-meta.xml
<CustomField>
    <fullName>Publish_on_Community_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will render the card to show it on the VC website</description>
    <label>Publish on Community Site</label>
    <type>Checkbox</type>
</CustomField>