common/force-app/main/default/objects/EOI__c/fields/Published_EOI_URL__c.field-meta.xml
<CustomField>
    <fullName>Published_EOI_URL__c</fullName>
    <label>Published EOI URL</label>
    <type>Url</type>
</CustomField>