common/force-app/main/default/objects/EOI__c/fields/Raise_Contact_email__c.field-meta.xml
<CustomField>
    <fullName>Raise_Contact_email__c</fullName>
    <label>Raise Contact email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>