common/force-app/main/default/objects/EOI__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <description>if the field &quot;Related_Person_Account__c&quot; is empty then it says &quot;YES&quot; otherwise &quot;NO&quot;</description>
    <formula>IF(ISBLANK(Related_Person_Account__c), &quot;NO&quot;, &quot;YES&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is a calculated field that will be used for the dashboard and tracking of the EOI</inlineHelpText>
    <label>Related Account</label>
    <type>Text</type>
</CustomField>