common/force-app/main/default/objects/EOI__c/fields/Related_Person_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Person_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Person Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EOI&apos;s (Related Person Account)</relationshipLabel>
    <relationshipName>EOI_s1</relationshipName>
    <type>Lookup</type>
</CustomField>