common/force-app/main/default/objects/EOI__c/fields/Related_Person_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Person_Account_ID__c</fullName>
    <formula>Account__r.PersonContact.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Person Account ID</label>
    <type>Text</type>
</CustomField>