common/force-app/main/default/objects/EOI__c/fields/Revenue_Potential_3__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Potential_3__c</fullName>
    <description>This is the potential revenue expected out of the total amount converted (Conversion Probability 30% field) multiplied for our commission (3%). Used for Executive Purposes</description>
    <formula>Conversion_Probability_30__c *0.03</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the potential revenue expected out of the total amount converted (Conversion Probability 30% field) multiplied for our commission (3%). Used for Executive Purposes</inlineHelpText>
    <label>Revenue Potential (3%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>