common/force-app/main/default/objects/EOI__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PropTech</fullName>
            </value>
            <value>
                <fullName>HealthTech</fullName>
            </value>
            <value>
                <fullName>BioTech</fullName>
            </value>
            <value>
                <fullName>Digital Health</fullName>
            </value>
            <value>
                <fullName>MedTech</fullName>
            </value>
            <value>
                <fullName>FoodTech</fullName>
            </value>
            <value>
                <fullName>FinTech</fullName>
            </value>
            <value>
                <fullName>EdTech</fullName>
            </value>
            <value>
                <fullName>ClimateTech</fullName>
            </value>
            <value>
                <fullName>ESG&apos;s</fullName>
            </value>
            <value>
                <fullName>E-Commerce</fullName>
            </value>
            <value>
                <fullName>Web3</fullName>
            </value>
            <value>
                <fullName>MarTech</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>SpaceTech</fullName>
            </value>
            <value>
                <fullName>DeepTech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>