common/force-app/main/default/objects/EOI__c/fields/SXSW_Finalist__c.field-meta.xml
<CustomField>
    <fullName>SXSW_Finalist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this if the EOI is an SXSW Finalist. This will enable it to be displayed on the SXSW Finalist EOI landing page</description>
    <inlineHelpText>Check this if the EOI is an SXSW Finalist. This will enable it to be displayed on the SXSW Finalist EOI landing page</inlineHelpText>
    <label>SXSW Finalist</label>
    <type>Checkbox</type>
</CustomField>