common/force-app/main/default/objects/EOI__c/fields/Target_Raise_Amount__c.field-meta.xml
<CustomField>
    <fullName>Target_Raise_Amount__c</fullName>
    <label>Target Raise Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>