common/force-app/main/default/objects/EOI__c/fields/Tax_Concessions__c.field-meta.xml
<CustomField>
    <fullName>Tax_Concessions__c</fullName>
    <label>Tax Concessions</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>