common/force-app/main/default/objects/EOI__c/fields/Time_to_Publish__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Publish__c</fullName>
    <description>This field calculates the time difference Created and Published Date</description>
    <formula>EOI_Published_Date__c-CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field calculates the time difference Created and Published Date</inlineHelpText>
    <label>Time to Publish</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>