common/force-app/main/default/objects/EOI__c/fields/Twitter_X_link__c.field-meta.xml
<CustomField>
    <fullName>Twitter_X_link__c</fullName>
    <label>Twitter/X link</label>
    <type>Url</type>
</CustomField>