common/force-app/main/default/objects/EOI__c/fields/URL_Files_Img__c.field-meta.xml
<CustomField>
    <fullName>URL_Files_Img__c</fullName>
    <description>This field stores a JSON file after a user click save on edit EOI. The Apex controller updating this is ContentDownloadURL</description>
    <inlineHelpText>This field stores a JSON file after a user click save on edit EOI. The Apex controller updating this is ContentDownloadURL</inlineHelpText>
    <label>URL_Files_Img</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>