common/force-app/main/default/objects/EOI__c/fields/Value_of_investment_interest__c.field-meta.xml
<CustomField>
    <fullName>Value_of_investment_interest__c</fullName>
    <label>Value of investment interest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>