common/force-app/main/default/objects/EOI__c/fields/Youtube_link__c.field-meta.xml
<CustomField>
    <fullName>Youtube_link__c</fullName>
    <label>Youtube link</label>
    <type>Url</type>
</CustomField>