common/force-app/main/default/objects/EOI__c/fields/Youtube_Video_Link__c.field-meta.xml
<CustomField>
    <fullName>Youtube_Video_Link__c</fullName>
    <description>This field is optional if the user would like to display a video in the EOI live deal</description>
    <inlineHelpText>Paste the YouTube URL video link</inlineHelpText>
    <label>Youtube Video Link</label>
    <type>Url</type>
</CustomField>