common/force-app/main/default/objects/EOI__c/recordTypes/Founder_EOI.recordType-meta.xml
<RecordType>
    <fullName>Founder_EOI</fullName>
    <active>true</active>
    <description>This is the Founder Record Type for the EOI&apos;s</description>
    <label>Founder EOI</label>
</RecordType>