common/force-app/main/default/objects/EOI__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EOI_Status__c</columns>
    <columns>Account__c</columns>
    <columns>Related_Person_Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Internal_Owner__c</columns>
    <columns>Target_Raise_Amount__c</columns>
    <columns>Completion__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>