common/force-app/main/default/objects/EOI__c/listViews/My_EOI_s.listView-meta.xml
<ListView>
    <fullName>My_EOI_s</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My EOI&apos;s</label>
</ListView>